--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-test part deux
+“Faith is not a question of the existence or non-existence of God. It is believing that love without reward is valuable.”
+― Emmanuel Levinas
+147 likesLike
+“To approach the Other in conversation is to welcome his expression, in which at each instant he overflows the idea a thought would carry away from it. It is therefore to receive from the Other beyond the capacity of the I, which means exactly: to have the idea of infinity. But this also means: to be taught. The relation with the Other, or Conversation, is a non-allergic relation, an ethical relation; but inasmuch as it is welcomed this conversation is a teaching. Teaching is not reducible to maieutics; it comes from the exterior and brings me more than I contain. In its non-violent transitivity the very epiphany of the face is produced.”
+― Emmanuel Levinas, Totality and Infinity: An Essay on Exteriority
+tags: inspirational, narcissism, philosophy54 likesLike
+“I will say this quite plainly, what truly human is -and don't be afraid of this word- love. And I mean it even with everything that burdens love or, i could say it better, responsibility is actually love, as Pascal said: 'without concupiscence' [without lust]... love exists without worrying being loved.”
+― Emmanuel Levinas, Of God Who Comes to Mind
+39 likesLike
+“For others, in spite of myself, from myself.”
+― Emmanuel Levinas
+21 likesLike
+“Au moment même où tout est perdu, tout est possible”
+― Emmanuel Lévinas
+21 likesLike
+“Love remains a relation with the Other that turns into need, transcendent exteriority of the other, of the beloved. But love goes beyond the beloved... The possibility of the Other appearing as an object of a need while retaining his alterity, or again,the possibility of enjoying the Other... this simultaneity of need and desire, or concupiscence and transcendence,... constitutes the originality of the erotic which, in this sense, is the equivocal par excellence.”
+― Emmanuel Lévinas, Totality and Infinity: An Essay on Exteriority
+18 likesLike
+“the "small goodness" from one person to his fellowman is lost and deformed as soon as it seeks organization and universality and system, as soon as it opts for doctrine, a treatise of politics and theology, a party, a state, and even a church. Yet it remains the sole refuge of the good in being. Unbeaten, it undergoes the violence of evil, which, as small goodness, it can neither vanquish nor drive out. A little kindness going only from man to man, not crossing distances to get to the places where events and forces unfold! A remarkable utopia of the good or the secret of its beyond.”
+― Emmanuel Levinas
+18 likesLike
+“This world, in which reason is more and more at home, is not habitable. It is hard and cold like those depots in which are piled up goods that cannot satisfy: neither clothe those who are naked, nor feed those who are hungry; it is as impersonal as factory hangars and industrial cities in which manufactured things remain abstract, true with statistical truth and borne on the anonymous circuit of the economy, resulting from skilful planning decisions which cannot prevent, but prepare disasters. There it is, the mind in its masculine essence, living on the outside, exposed to the violent, blinding sun, to the trade winds that beat against it and beat it down, on a land without folds, rootless, solitary and wandering and thus already alienated by the very things which it caused to be produced and which remain untameable and hostile.”
+― Emmanuel Lévinas
+tags: philosophy15 likesLike
+“What could an entirely rational being speak of with another entirely rational being?”
+― Emmanuel Levinas
+tags: comunication, love, rationality12 likesLike
+“We breathe for the sake of breathing, eat and drink for the sake of eating and drinking, we take shelter for the sake of taking shelter, we study to satisfy our curiosity, we take a walk for the walk. All that's not for the sake of living, it is living. Life is a sincerity.”
+― Emmanuel Levinas, Existence and Existents
+tags: philosophy11 likesLike
+“In weariness, existence is like the reminder of a commitment to exist, with all the seriousness and harshness of an irrevocable contract. One has to do something, one has to aspire after and undertake [...] In weariness we want to escape existence itself, and not only one of its landscapes in a longing for more beautiful skies. An evasion without an itinerary and without an end, it is not trying to come ashore somewhere.”
+― Emmanuel Levinas, Existence and Existents
+tags: depression, philosophy8 likesLike
+“To approach the Other in conversation is to welcome his expression, in which at each instant he overflows the idea a thought would carry away from it. It is therefore to receive from the Other beyond the capacity of the I, which means exactly: to have the idea of infinity. But this also means: to be taught.”
+― Emmanuel Levinas, Totality and Infinity: An Essay on Exteriority”
+― Emmanuel Levinas
+7 likesLike
+“The true life is absent.' But we are in the world. Metaphysics arises and is maintained in this alibi.”
+― Emmanuel Lévinas, Totality and Infinity: An Essay on Exteriority
+6 likesLike
+“El amor no es una posibilidad, no se debe a nuestra iniciativa, es sin razón, nos invade y nos hiere y, sin embargo, el yo sobrevive en él. Una fenomenología de la voluptuosidad -la voluptuosidad no es un placer cualquiera, porque no es un placer solitario como el comer o el beber-, parece confirmar nuestro punto de vista sobre el papel y el lugar excepcionales representados por lo femenino, y sobre la ausencia de toda fusión en el erotismo.”
+― Emmanuel Levinas
+6 likesLike
+“Le présent, libre a l'égard du passé, mais captif de lui-même, respire la gravité de l'être où il s'engage”
+― Emmanuel Levinas
+5 likesLike
+“A fine risk is always something to be taken in philosophy. ... Philosophy thus arouses a drama between philosophers and an intersubjective movement which does not resemble the dialogue of teamworkers in science, nor even the Platonic dialogue which is the reminiscence of a drama rather than a drama itself. It is sketched out in a different structure; empirically it is realized as the history of philosophy in which new interlocutors always enter who have to restate, but in which the former ones take up the floor to answer in the interpretations they arouse, and in which, nonetheless, despite a lack of "certainty in one's movements" or because of it, no one is allowed a relaxation of attention or a lack of strictness.”
+― Emmanuel Levinas, Otherwise than Being, or, Beyond Essence
+tags: philosophy4 likesLike
+“One can like one's job, enjoy these material gestures and the things that permit the accomplishing of them. One can transform the curse of labor into sport. Activity does not derive its value and meaning from an ultimate and unique goal [...] To enjoy without utility, in pure loss, gratuitously, without referring to anything else, in pure expenditure---this is human.”
+― Emmanuel Levinas, Totality and Infinity: An Essay on Exteriority
+4 likesLike
+“Tools refer to one another to finally refer to our care for existing. In turning on a bathroom switch, we open up the entire ontological problem”
+― Emmanuel Levinas, Time and the Other
+4 likesLike
+“Its strangeness is, we might say, due to its very reality, to the very fact that there is existence. The questioning of Being is an experience of Being in its strangeness”
+― Emmanuel Levinas, Existence and Existents
+tags: consciousness, ontology, philosophy3 likesLike
+“At the very moment when the world seems to break up we still take it seriously and perform reasonable acts and undertakings, the condemned man still drinks his glass of rum. To call it everyday and condemn it as inauthentic is to fail to recognize the sincerity of hunger and thirst”
+― Emmanuel Levinas, Existence and Existents
+3 likesLike
+“The contemporary world, scientific, technical, and sensualist, sees itself without exit - that is, without God - not because everything there is permitted and, by the way of technology, possible, but because everything there is equal. The unknown is immediately made familiar [...] The enchantment of sites, hyperbole of metaphorical concepts, the artifice of art, exaltation of ceremonies, the magic of solemnities - everywhere is suspected and denounced a theatrical apparatus, a purely rhetorical transcendence, the game. Vanity of vanities: the echo of our own voices, taken for a response to the few prayers that still remain to us; everywhere we have fallen back upon our own feet, as after the ecstasies of a drug. Except the other whom, in all this boredom, we cannot let go.”
+― Emmanuel Levinas
+tags: enchantment, ethics, poetry, responsibility3 likesLike
+“…in crucial times, when the perishability of so many values is revealed, all human dignity consists in believing in their return.”
+― Emmanuel Levinas, Proper Names
+3 likesLike
+“To approach the Other in conversation is to welcome his expression, in which at each instant he overflows the idea a thought would carry away from it. It is therefore to receive from the Other beyond the capacity of the I, which means exactly: to have the idea of infinity. But it also means: to be taught.”
+― Emmanuel Levinas, Totality and Infinity: An Essay on Exteriority
+2 likesLike
+“La liberté ne consiste pas à se nier, mais à se faire pardonner son être par l'altérité même d'autrui”
+― Emmanuel Lévinas
+1 likesLike
+“De beschaving is wezenlijk hypocriet , dat wil zeggen zowel gehecht aan het Ware als aan het Goede, die voortaan elkaars tegenspelers zijn. Het is misschien tijd om in de hypocrisie niet slechts een toevallig kwalijk gebrek van de mens te zien, maar de diepe verscheurdheid van een wereld die tegelijkertijd gehecht is aan filosofen en aan profeten.”
+― Emmanuel Levinas, Totality and Infinity: An Essay on Exteriority
+tags: filosofie, philosophy0 likesLike
+“In the human, lo and behold, the possible apparition of an ontological absurdity. The concern for the other breaches concern for self. This is what I call holiness. Our humanity consists in being able to recognize this priority of the other . . . . It is here in this priority of the other man over me that, before my admiration for creation, well before my search for the first cause of the universe, God comes to mind.”
+― Emmanuel Levinas
+tags: god, holiness, the-other0 likesLike
+“La relación con lo Otro me pone en cuestión, me vacía de mí mismo y no deja de vaciarme, descubriéndome en tal modo con recursos siempre nuevos.”
+― Emmanuel Levinas
+tags: descubrir, levinas, otro, vaciar0 likesLike
+“Gelecekle ilişki, geleceğin şimdideki mevcudiyeti de
+başkasıyla ilişkide gerçekleşir gibi görünüyor. Yüz
+yüze durumu, zamanın bizzat gerçekleşmesi olsa gerek;
+şimdinin geleceğe adım atması yalnız bir öznenin olgusu
+değil, öznelerarası ilişkidir. Zamanın koşulu insanlararası
+ilişkide veya tarihte bulunur.
+Emmanuel Levinas”
+― Emmanuel Levinas
+0 likesLike
+“L'idée de l'infini consiste à penser plus qu'on ne pense.”
+― Emmanuel Lévinas, Difficult Freedom: Essays on Judaism
